--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -14,7 +14,8 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug|jugo|south}} an
 ===Proper noun===
 {{en-proper noun}}
 
-# {{senseid|en|Q36704}}A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Bosnia and Herzegovina]], [[Croatia]], [[North Macedonia]], [[Montenegro]], [[Serbia]], [[Kosovo]], and [[Slovenia]]; it disintegrated in the 1990s.
+# {{senseid|en|Q36704}} A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Bosnia and Herzegovina]], [[Croatia]], [[North Macedonia]], [[Montenegro]], [[Serbia]], [[Kosovo]], and [[Slovenia]]; it disintegrated in the 1990s.
+# {{lb|en|nonstandard|rare}} The [[State Union of Serbia and Montenegro]].
 
 ====Derived terms====
 * {{l|en|Yugosphere}}
