--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -102,6 +102,9 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 ====Compounds====
 {{zh-der|雞春|魚春|多春魚|春袋|春核|蝦春|石春|水蛇春咁長|乜春|鵝春石}}
 
+===References===
+* {{R:yue:Hanzi}}
+
 {{zh-cat|Beginning}}
 
 ----
