--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -158,6 +158,7 @@ From {{inh|nl|dum|het}}, {{m|dum|hit}}, from {{inh|nl|odt|it}}, {{m|odt|hit}}, f
 ==Finnish==
 
 ===Etymology 1===
+{{m|fi|he}} with standard nominative plural suffix {{m|fi|-t}}.
 
 ====Pronunciation====
 {{fi-pronunciation}}
@@ -173,6 +174,7 @@ From {{inh|nl|dum|het}}, {{m|dum|hit}}, from {{inh|nl|odt|it}}, {{m|odt|hit}}, f
 * {{l|fi|net}} {{qualifier|Kven}}
 
 ===Etymology 2===
+From {{der|fi|he|חי״ת|tr=khet}}.
 
 ====Noun====
 {{fi-noun}}
