--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -17,7 +17,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 #: ''In his anger he '''pushed''' me against the wall and threatened me.''
 #: ''You need to '''push''' quite hard to get this door open.''
 # {{lb|en|transitive}} To continually attempt to persuade (a person) into a particular course of action.
-#* {{rfdatek|en|Jonathan Swift}}
+#* {{RQ:Swift Examiner 18}}
 #*: We are '''pushed''' for an answer.
 #* {{rfdatek|en|Spectator}}
 #*: Ambition '''pushes''' the soul to such actions as are apt to procure honour to the actor.
