--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -73,6 +73,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 {{der3|en|title=Terms derived from ''bridge'' (etymology 1)
 |Appley Bridge
 |Bailey bridge
+|bowstring bridge
 |bridge loan
 |bridge mount
 |Bridge of Dun
