--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -12,6 +12,8 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 [[:File:YsyriAr.gif|Line 27]] of the [[w:Merneptah Stele|Merneptah Stele]] (from about 1200 {{B.C.E.}}) is thought to contain the earliest attestation of the name ''Israel'' in any language, {{cog|egy|ysrjꜣr}} (although alternative readings have been proposed, such as ''[[Jezreel]]''):
 : <hiero>i-i-z:Z1s*Z1s:r-i-A-r:Z1*T14-A1*B1:Z2</hiero>
 
+{{doublet|en|Yisroel}}.
+
 ===Pronunciation===
 * {{enPR|ĭzʹrāəl|ĭzʹrēəl}}; {{IPA|en|/ˈɪzɹeɪəl/|/ˈɪzɹi.əl/}}.
 *: {{qualifier|In singing also}} {{enPR|ĭzʹrīĕl}}; {{IPA|en|/ˈɪzɹaɪɛl/}}
