--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -12,7 +12,7 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 * {{rhymes|en|ɒnd}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|f}}
 
 # {{alternative form of|en|blond|nodot=1}} {{gloss|person of fair hair}}. {{qualifier|Used especially of a woman. See the usage notes in the entry ''[[blond]]''.}}
 # {{alternative form of|en|blond|nodot=1}} {{gloss|[[pale]] [[golden]] [[brown]] [[color]]}}.
