--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -209,6 +209,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Hebrew: {{t+|he|ענף|m|tr=anaf}}
 * Hungarian: {{t|hu|leágazás}}
 * Ido: {{t+|io|brancho}}, {{t+|io|ramo}}
+* Kurdish: {{t+|ku|liq}}
 * Maori: {{t|mi|pekanga}}
 * Polish: {{t+|pl|rozgałęzienie|n}}
 {{trans-mid}}
