--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -9,7 +9,7 @@
 * {{homophones|en|plumb}}
 
 ===Etymology 1===
-From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {{inh|en|gmw-pro|*plūmā}}. {{doublet|en|prune}}.
+From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {{inh|en|gmw-pro|*plūmā}}, borrowed from {{bor|gmw-pro|la|prūnum}}. {{doublet|en|prune}}.
 
 ====Noun====
 [[Image:Plum on tree.jpg|thumb|A plum growing on a plum tree.]]
