--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -93,12 +93,14 @@ From {{inh|en|enm|founden}}, from {{der|en|fro|founder}} (Modern French: {{m|fr|
 * Georgian: {{t|ka|დაფუძვნება}}
 * German: {{t+|de|gründen}}
 * Greek: {{t+|el|ιδρύω}}, {{t+|el|συστήνω}}
+* Hungarian: {{t+|hu|alapít}}, {{t+|hu|megalapít}}
 * Italian: {{t+|it|fondare}}
 * Japanese: {{t|ja|興す|tr=okosu}}, {{t|ja|打ち立てる|tr=uchitateru}}, {{t+|ja|設立|alt=設立する|tr=setsuritsu suru}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t+|ko|설립하다}}, {{t+|ko|수립하다}}
 * Latin: {{t|la|fundō}}
+* Latvian: {{t|lv|dibināt}}
 * Norwegian: {{t|no|grunnlegge}}
 * Occitan: {{t+|oc|fondar}}
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
