--- a/en/愐/愐.15652.wikitext
+++ b/en/愐/愐.15652.wikitext
@@ -17,12 +17,18 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|心|面|ls=psc|c1=s|c2=p|t1=heart}}.
+
+===Etymology===
+; “diligent; hardworking”
+: Cognate with {{och-l|勉}} ({{zh-ref|Wang, 1982}}).
 
 ===Pronunciation===
 {{zh-pron
 |m=miǎn
 |c=min5
-|h=pfs=mén
+|h=pfs=mén;gd=mên3
+|mn=bián
 |mc=y
 |oc=y
 |ma=
@@ -32,10 +38,17 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{lb|zh|literary}} [[diligent]]; [[hardworking]]
+# {{lb|zh|literary|or|Hakka}} to [[think]]; to [[consider]]
 
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+====Synonyms====
+{{zh-dial|想}}
+
+===Compounds===
+{{zh-der|愐心事}}
+
+===Descendants===
+* → Greater Bai: {{l|und|*mi²||to think}}
 
 ----
 
