--- a/en/愐/愐.15652.wikitext
+++ b/en/愐/愐.15652.wikitext
@@ -4,11 +4,8 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=91060|canj=PMWL|ids=⿰忄面}}
 
-# [[bashful]]
-# to [[consider]]
-
 ====References====
-* {{Han ref|kx=0394.260|dkj=10925|dj=0731.020|hdz=42327.030|uh=6110|ud=24848|bh=D94D|bd=55629}}
+{{Han ref|kx=0394.260|dkj=10925|dj=0731.020|hdz=42327.030|uh=6110}}
 
 ----
 
