--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -439,17 +439,16 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #* {{quote-book|en|author=Gene W. Zepp|title=24 Heures Du Mans|location=[S.l.]|publisher={{w|Xlibris}}|year=2011|page=19|isbn=978-1-4628-6700-4|passage=Seppi started the engine, then shifted first gear and sped away into second, then third and fourth gear. Frank heard the roar of the Porsche's engine further down the '''straight''' and the back short straight. He held a stopwatch in his hand, waiting for him to come up into the '''straight''' from the hairpin curve.}}
 # {{lb|en|[[poker]]}} Five cards in [[sequence]].
 # {{lb|en|colloquial}} A [[heterosexual]].
-#: ''My friends call '''straights''' "heteros".''
+#: {{syn|en|hetero|breeder}}
+#: {{ux|en|My friends call '''straights''' "heteros".}}
 # {{lb|en|slang}} A [[normal]] [[person]]; someone in [[mainstream]] society.
+#: {{syn|en|Thesaurus:mainstreamer}}
+#* {{quote-song|en|title=How Do You Sleep?|album=Imagine|author=John Lennon|year=1971|passage=You live with '''straights''' who tell you you was king / Jump when your momma tell you anything}}
 #* {{quote-av|en|year=1989| title=[[wikipedia:Ghostbusters II|Ghostbusters II]]| people={{w|Bill Murray}}| role={{w|Peter Venkman}}| passage=Boys! Boys! You're scaring the '''straights''', okay? Is there any way that we could do this tomorrow?}}
 #* {{quote-book|en|year=2014|first=Matthew D.| last=Tribbe| title=No Requiem for the Space Age| chapter=Turning a Miracle into a Bummer| isbn=9780199313525| page=150| passage=More importantly, ''Blows Against the Empire'' {{...}} more than any other work revealed the split vision towards space exploration among many in the counter-culture: a romantic vision of the freedom offered by space that had been fostered by a lifetime of science fiction consumption, immersion in a technological society, the countercultural yearning for speed and “the road,” and, thanks to LSD and other hallucinogens, a unique preappreciation of space traveling not available to '''straights''', versus the bland, oppressive vision of exploration offered by NASA, itself just one part of a larger destructive system that was devastating Earth and that could only offer further oppression in space, not liberation.}}
 # {{lb|en|slang}} A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter#Noun|straighter]]. {{defdate|from 20th c.}}
 #* ['''1923''', J[oseph] Manchon, ''Le slang : lexique de l'anglais familier et vulgaire : précédé d'une étude sur la pronunciation et la grammaire populaires'', p. 296:
 #*: A straight = a straighter = a straight cut, une cigarette en tabac de Virginie.]
-
-====Synonyms====
-* {{sense|heterosexual}} {{l|en|hetero}}, {{l|en|breeder}}
-* {{sense|normal person}} see [[Thesaurus:mainstreamer]]
 
 ====Translations====
 {{trans-top|something that is not crooked or bent}}
