--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -7,7 +7,7 @@
 
 ===Etymology===
 From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|cote}}, {{m|fro|cotte||outer garment with sleeves}}, from {{der|en|la|cotta||undercoat, tunic}}, from {{der|en|gem-pro|*kuttô}}, {{m|gem-pro|*kuttǭ||cowl, woolen cloth, coat}}, from {{der|en|ine-pro|*gʷewd-}}, {{m|ine-pro|*gud-||woolen clothes}}. Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||coarse woolen blanket; woolen cape}}), {{cog|gml|kot||coat}}, {{cog|grc|βεῦδος||woman's attire}}.
-
+lock
 ===Pronunciation===
 * {{a|GA}} {{IPA|en|/koʊt/}}
 * {{a|RP}} {{IPA|en|/kəʊt/}}
@@ -30,7 +30,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 #: {{ux|en|When the dog shed its '''coat''', it left hair all over the furniture and the carpet.}}
 # {{lb|en|uncountable|nautical}} [[canvas|Canvas]] [[painted]] with [[thick]] [[tar]] and secured round a [[mast]] or [[bowsprit]] to prevent [[water]] running [[down]] the sides into the [[hold]] (now made of [[rubber]] or [[leather]]).
 # {{lb|en|obsolete}} A [[petticoat]].
-#* {{rfdatek|en|John Locke}}
+#* {{RQ:Locke Education|148}}
 #*: a child in '''coats'''
 # The [[habit]] or [[vesture]] of an order of men, indicating the order or office; [[cloth]].
 #* {{RQ:Swift The Grand Question Debated of Hamilton's Bawn}}
@@ -40,7 +40,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 # A [[coat of arms]].<sup>{{w|Coat of arms|Wp}}</sup>
 #*{{RQ:Shakespeare Henry 6-1|I|v|passage=[[Hark]], countrymen! either renew the fight, / Or tear the lions out of England's '''coat'''.}}
 # A [[coat card]].
-#* {{rfdatek|en|Philip Massinger}}
+#* {{RQ:Massinger The Old Law}}
 #*: Here's a trick of discarded cards of us! We were ranked with '''coats''' as long as old master lived.
 
 ====Derived terms====
