--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -6,7 +6,7 @@ From {{inh|he|sem-pro|*ʾarṣ́-}}. Compare {{cog|ar|أَرْض}} and {{cog|arc
 
 ===Pronunciation===
 * {{a|IL}} {{IPA|he|/ˈeʁet͡s/}}
-* {{a|Ashkenazi Hebrew}} {{IPA|he|/e.ret͡s/}}
+* {{a|Ashkenazi Hebrew}} {{IPA|he|/ˈe.ret͡s/}}
 * {{a|Sephardi Hebrew}} {{IPA|he|/ˈeres/}}
 * {{a|Yemenite Hebrew}} {{IPA|he|/ˈʔæræsˤ/}}
 * {{a|Tiberian}} {{IPA|he|/ˈʔɛʀɛsˤ/}}
