--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -6,8 +6,8 @@ From {{inh|he|sem-pro|*ʾarṣ́-}}. Compare {{cog|ar|أَرْض}} and {{cog|arc
 
 ===Pronunciation===
 * {{a|IL}} {{IPA|he|/ˈeʁet͡s/}}
-* {{a|Ashkenazi Hebrew}} {{IPA|he|/ˈe.ɾet͡s/|[ˈe.ʁet͡s]}}
-* {{a|Sephardi Hebrew}} {{IPA|he|/ˈeres/}}
+* {{a|Ashkenazi Hebrew}} {{IPA|he|[ˈe.ɾet͡s]|[ˈe.ʁet͡s]}}
+* {{a|Sephardi Hebrew}} {{IPA|he|/ˈeres/|[ˈeɾes]}}
 * {{a|Yemenite Hebrew}} {{IPA|he|/ˈʔæræsˤ/}}
 * {{a|Tiberian}} {{IPA|he|/ˈʔɛʀɛsˤ/}}
 * {{a|Biblical Hebrew}} {{IPA|he|/ˈʔeresˤ/}}
