--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -20,7 +20,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 ====Usage notes====
 Differences exist in usage of the common terms {{m|en|turtle}}, {{m|en|tortoise}}, and {{m|en|terrapin}}, depending on the variety of English being used. In American usage, {{m|en|turtle}} is often a general term; {{m|en|tortoise}} is used only in reference to terrestrial turtles or, more narrowly, only those members of {{m|mul|Testudinidae}}, the family of modern land tortoises; and {{m|en|terrapin}} may refer to turtles that are small and live in fresh and brackish water.
 
-British usage, by contrast, tends not to use {{m|en|turtle}} as a generic term for all members of the order, and also applies the term {{m|en|tortoise|tortoises}} broadly to all land-dwelling members of the order {{m|mul|Testudines}}, regardless of whether they are actually members of the family {{m|mul|Testudinidae}}.
+British usage, by contrast, tends not to use {{m|en|turtle}} as a generic term for all members of the order but instead as a synonym for ''sea turtle'' specifically, and also applies the term {{m|en|tortoise|tortoises}} broadly to all land-dwelling members of the order {{m|mul|Testudines}}, regardless of whether they are actually members of the family {{m|mul|Testudinidae}}.
 
 Land tortoises are not native to Australia, yet traditionally freshwater turtles have been called {{m|en|tortoise|tortoises}} in Australia.
 
