--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -14,7 +14,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 ===Noun===
 {{en-noun}}
 
-# Any of various land-dwelling [[reptile]]s, of [[family]] [[Testudinidae]], whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
+# Any of various land-dwelling [[reptile]]s, of the [[family]] [[Testudinidae]] {{lb|en|chiefly|North America}} or the order [[Testudines]] {{lb|en|chiefly|UK}}, whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
 #: {{syn|en|shellpad|q=obsolete}}
 
 ====Usage notes====
