--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -170,7 +170,7 @@
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Сједињене Америчке Државе|f-p}}, {{t|sh|Америка|f}}, {{t|sh|САД|f-p}}
 *: Roman: {{t+|sh|Sjedinjene Američke Države|f-p}}, {{t+|sh|Amerika}}, {{t|sh|SAD|f-p}}
-* Sicilian: {{t|scn|Stati Uniti dâ Mèrica|m-p}}
+* Sicilian: {{t|scn|Stati Uniti dâ Mèrica|m-p}}, {{t|scn|Stati Uniti|m-p}}, {{t|scn|Mèrica|f-s}}
 * Silesian: {{t|szl|Stany Zjydnočůne Ameryki|m-p}}
 * Sindhi: {{t|sd|گڏيل آمريڪي رياستون}}, {{t|sd|يونائيٽيڊ سٽيٽس آف آميريڪا}}
 * Sinhalese: {{t|si|ඇමරිකානු එක්සත් ජනපදය}}, {{t|si|ඇමරිකාව}}
