--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautiful}}, equivalent to {{suf|en|beauty|ful|pos=adjective}}. Displaced {{noncog|ang|fæġer}}.
+From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautiful}}, equivalent to {{suf|en|beauty|ful|pos=adjective}}. Largely displaced {{noncog|ang|fæġer}} (whence {{m|en|fair}}).
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|en|/ˈbjuːtɪfəl/}}
