--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -98,6 +98,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 *: Mandarin: {{t+|cmn|天頂}}, {{t+|cmn|天顶|tr=tiāndǐng}}
 * Czech: {{t+|cs|nadhlavník|m}}, {{t+|cs|zenit|m}}
 * Dutch: {{t+|nl|zenit|n}}
+* Estonian: {{t+|et|seniit}}
 * Finnish: {{t+|fi|lakipiste}}
 * French: {{t+|fr|zénith|m}}
 * German: {{t+|de|Zenit|m}}
