--- a/en/惺/惺.15630.wikitext
+++ b/en/惺/惺.15630.wikitext
@@ -4,6 +4,9 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=96014|canj=PAHM|ids=⿰忄星}}
 
+====Derived characters====
+* [[㝭]]
+
 ====References====
 {{Han ref|kx=0393.040|dkj=10868|dj=0729.020|hdz=42328.020|uh=60FA}}
 
