--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -260,6 +260,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 *: Ancient Greek: {{t|grc|ψηλαφάω}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|tapogat}}, {{t+|hu|kitapogat}}
+* Kabuverdianu: {{t|kea|palpa}}, {{t|kea|palpá}}
 * Latvian: {{t|lv|taustīt}}
 * Norwegian: {{t+|no|kjenne|alt=kjenne etter}}, {{t+|no|føle}}
 * Portuguese: {{t|pt|palpar}}, {{t+|pt|tatear}}
