--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -116,7 +116,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 {{trans-mid}}
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|感じる|tr=かんじる, kanjiru}}, {{t+|ja|触れる|tr=ふれる, fureru}}
-* Kabuverdianu: {{t|kea|palpa}}, {{t|kea|palpá}}
+* Kabuverdianu: {{t|kea|palpa}}, {{t|kea|palpá}}, {{t|kea|xinti}}, {{t|kea|sintí}}
 * Latgalian: {{t|ltg|just}}, {{t|ltg|pajust}}
 * Latvian: {{t|lv|taustīt}}, {{t+|lv|just}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|feel}}
@@ -176,6 +176,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 *: Old Irish: {{t|sga|ceta·bí}}
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|感じる|tr=かんじる,kanjiru}}
+* Kabuverdianu: {{t|kea|xinti}}, {{t|kea|sintí}}
 * Kazakh: {{t+|kk|сезу|sc=Cyrl}}
 * Khmer: {{t|km|មានអារម្មណ៍|tr=mien aarɑm|sc=Khmr}}
 * Korean: {{t+|ko|느끼다}}
