--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -114,6 +114,7 @@ Cognate with {{och-l|安|where; how}}, {{och-l|焉|where; how|id=3}}.
 {{zh-hanzi}}
 
 # {{lb|zh|literary}} {{n-g|An interrogative pronoun}}: [[how]]
+#* {{zh-x|君子 去 仁，惡{wū} 乎 成名？|If a superior man abandon virtue, '''how''' can he fulfil the requirements of that name?|ref=Analects}}
 #* {{zh-x|自 我 觀 之，仁義 之 端，是非 之 塗，樊然 殽{yáo}亂，吾 惡{wū} 能 知 其 辯？|As I look at the matter, the first principles of benevolence and righteousness and the paths of approval and disapproval are inextricably mixed and confused together - '''how''' is it possible that I should know how to discriminate among them?|ref=Zhuangzi}}
 #* {{zh-x|先生 飲 一 斗 而 醉，惡{wū} 能 飲 一 石{dàn} 哉？|You, sir, become drunk after drinking just one ''dou''; '''how''' can you drink one ''dan''?|ref=Shiji}}
 # {{lb|zh|literary}} {{n-g|Interjection used to express surprise}}: [[oh]]; [[ah]]
