--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -352,7 +352,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 *: Lower Sorbian: {{t|dsb|rězaś|impf}}, {{t|dsb|kšajaś|impf}} {{qualifier|food like bread and cheese}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}} {{qualifier|with knife}}, {{t+|sv|klippa}} {{qualifier|with scissors}}
-* Thai: {{t+|th|ตัด}}
+* Thai: {{t+|th|ตัด}}, {{t+|th|หั่น}}
 * Tigrinya: {{t|ti|ቁረጽ}}
 * Welsh: {{t+|cy|torri}}
 * Westrobothnian: {{t|gmq-bot|täli}}
