--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -16,6 +16,7 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|殷|心|ls=psc|c1=p|c2=s|t2=heart}}.
 
 ===Etymology===
 {{zh-see|殷|v|hospitality}}
