--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -424,6 +424,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 
 ===See also===
 * {{l|en|brickfielder}}
+* {{en|brick it}}
 
 ===Further reading===
 * {{pedialite}}
