--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -125,6 +125,8 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Three Bridges
 |Tower Bridge
 |vertical-lift bridge
+|Wadebridge
+|Wadsley Bridge
 |water under the bridge
 |Weybridge
 |Whaley Bridge
