--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -52,7 +52,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 ## To [[abridge]] a piece of printed or written work.
 ## To [[reduce]], especially intentionally.
 ##: {{ux|en|They're going to '''cut''' salaries by fifteen percent.}}
-##* {{quote-journal|en|date=2013-05-17|author=={{George Monbiot}}| volume=188| issue=23| page=19| magazine={{w|The Guardian Weekly}}| title=[http://www.guardian.co.uk/commentisfree/2013/may/06/politics-envy-keenest-rich Money just makes the rich suffer]| passage=In order to grant the rich these pleasures, the social contract is reconfigured. The welfare state is dismantled. Essential public services are '''cut''' so that the rich may pay less tax.}}
+##* {{quote-journal|en|date=2013-05-17|author={{w|George Monbiot}}| volume=188| issue=23| page=19| magazine={{w|The Guardian Weekly}}| title=[http://www.guardian.co.uk/commentisfree/2013/may/06/politics-envy-keenest-rich Money just makes the rich suffer]| passage=In order to grant the rich these pleasures, the social contract is reconfigured. The welfare state is dismantled. Essential public services are '''cut''' so that the rich may pay less tax.}}
 ## To absent oneself from (a class, an appointment, etc.).
 ##: {{ux|en|I '''cut''' fifth period to hang out with Angela.}}
 ##* {{rfdatek|en|Thomas Hamilton}}
