--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -76,7 +76,7 @@
 * Kalmyk: {{t|xal|Ниицәтә Нутг}}
 * Kazakh: {{t|kk|Біріккен Корольдік|alt=Бірікке́н Коро́льдік}}, {{t|kk|Құрама Патшалық|alt=Құрама́ Патшалы́қ}} {{q|rare}}, {{t|kk|Ұлыбритания және Солтүстік Ирландия Біріккен Корольдігі}}, {{t|kk|Біріккен Патшалық}}
 * Khmer: {{t|km|ចក្រភពអង់គ្លេស}}, {{t|km|សហរាជាណាចក្រ}}, {{t+|km|រាជាណាចក្ររួម}}
-* Korean: {{t|ko|^영국}} ({{t+|ko|英國}}), {{t|ko|^그레이트브리튼 ^북아일랜드 ^연합왕국}} {{t|ko|^연합 왕국}}
+* Korean: {{t+|ko|영국}} ({{t+|ko|英國}}), {{t|ko|[[그레이트브리튼]] [[북]][[아일랜드]] [[연합]] [[왕국]]}} ({{t|ko|-[[北]]-[[聯合王國]]}}), {{t+|ko|[[연합]] [[왕국]]}} ({{t+|ko|聯合王國}})
 * Kurdish: {{t+|ku|Keyaniya Yekbûyî}}
 * Kyrgyz: {{t|ky|Бириккен Падышалык}}
 * Lao: {{t+|lo|ສະຫະລາຊະອານາຈັກ}}
