--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -44,6 +44,8 @@
 # [[falsehood]]; [[untruthfulness]]
 # [[illegal]]; [[illegitimate]]
 #: {{zh-x|偽政權|puppet government}}
+#: {{zh-x|^偽--^滿洲國|Manchukuo}}
+#: {{zh-x|^偽---^北京 ^大學|the {{w|Peking University}} under the control of the {{w|Provisional Government of the Republic of China (1937–1940)}}}}
 # [[pseudo-]]
 #: {{zh-x|偽麻黃鹼|pseudoephedrine}}
 
