--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -71,6 +71,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 
 =====Derived terms=====
 {{der3|en|title=Terms derived from ''bridge'' (etymology 1)
+|Apperley Bridge
 |Appley Bridge
 |Bailey bridge
 |Bamber Bridge
