--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -48,7 +48,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Irish: {{t|ga|fionn}}
 {{trans-mid}}
 * Japanese: {{t|ja|[[金髪]]の|tr=きんぱつの, kinpatsu-no}}
-* Korean: {{t|ko|[[금발]]의}}
+* Korean: {{t+|ko|금발|alt=금발의}} ({{t|ko|[[金髮]]-}})
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|blonds}}
 * Macedonian: {{t|mk|рус|f}}, {{t|mk|плав|f}}
@@ -94,6 +94,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Italian: {{t+|it|biondo}}
 * Japanese: {{t+|ja|金髪|tr=kinpatsu}}
 * Khmer: {{t|km|សក់ទង់ដែង|tr=sɑk tʊəŋ daeŋ}}
+* Korean: {{t+|ko|금발|alt=금발의}} ({{t|ko|[[金髮]]-}})
 * Ladino: {{t|lad|blondeado}}
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|gaišmatains}}, {{t|lv|blonds}}
@@ -143,6 +144,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Hungarian: {{t+|hu|szőke}} {{qualifier|hair color}}
 * Indonesian: {{t+|id|pirang}}
 * Japanese: {{t+|ja|金髪|tr=kinpatsu}} {{qualifier|hair color}}
+* Korean: {{t+|ko|금발}} ({{t|ko|金髮}})
 {{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|کاڵ}}
@@ -177,7 +179,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Italian: {{t+|it|biondo|m}}, {{t+|it|bionda|f}}
 * Japanese: {{t+|ja|金髪|tr=きんぱつ, kinpatsu}} {{qualifier|blond hair}}
 {{trans-mid}}
-* Korean: {{t|ko|금발인}}, {{t+|ko|금발}} {{qualifier|blond hair}}
+* Korean: {{t|ko|[[금발]][[이다|인]] [[사람]]}} ({{t+|ko|[[金髮]]-}}), {{t+|ko|금발}} ({{t|ko|金髮}}) {{qualifier|blond hair}}
 * Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}, {{t|la|flava|f}}
 * Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
 * Macedonian: {{t|mk|ру́сокос|m}}, {{t|mk|плав|m}}, {{t|mk|русо́коса|f}}, {{t|mk|пла́ва|f}}
