--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -176,6 +176,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * German: {{t+|de|Vorhang|m}}
 * Greek: {{t+|el|αυλαία|f}}
 *: Ancient: {{t|grc|αὐλαία|f}}
+* Hebrew: {{t+|he|מסך|m|tr=masákh}}
 * Hindi: {{t+|hi|पर्दा|m}}
 * Icelandic: {{t|is|leikhústjald|n}}, {{t+|is|tjald|n}}
 * Irish: {{t|ga|brat|m}}
