--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -181,7 +181,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Assamese:
 *: Eastern: {{t|as|কটা}}
 *: Central: {{t|as|কাটা}}
-* Azerbaijani: {{t+|az|kəsmək}}
+* Azerbaijani: {{t+|az|kəsmək}}, {{t|az|çapmaq}}
 * Bashkir: {{t|ba|киҫеү}}
 * Belarusian: {{t|be|рэ́заць|impf}}, {{t|be|секчы́|impf}}, {{t|be|рубі́ць|impf}} {{qualifier|axe}}
 * Bengali: {{t|bn|কাটা}}
@@ -302,7 +302,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Afrikaans: {{t|af|sny}}
 * Arabic: {{t+|ar|قَطَعَ}}
 * Armenian: {{t+|hy|կտրատել}}
-* Azerbaijani: {{t+|az|kəsmək}}
+* Azerbaijani: {{t+|az|kəsmək}}, {{t|az|çapmaq}}
 * Bengali: {{t|bn|কাটা}}
 * Bulgarian: {{t+|bg|режа}}, {{t+|bg|сека}}, {{t+|bg|разсичам}}
 * Burmese: {{t+|my|ညှပ်}}
