--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -33,6 +33,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 ====Translations====
 {{trans-top|of a pale golden colour}}
 * Arabic: {{t|ar|أَشْقَر}}, {{t|ar|شَقْرَاء|f}}
+*: Hijazi Arabic: {{t|acw|أَشْقَر|m|tr=ašgar}}, {{t|acw|شَقْرَا|f|tr=šagra}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
 * Chinese:
 *: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}}
