--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -229,7 +229,7 @@ From the above verb.
 {{trans-top|gradual deformation of material under stress}}
 * Finnish: {{t+|fi|viruminen}}
 {{trans-mid}}
-* French: {{t+|fr|fatigue|f}}
+* French: {{t+|fr|fatigue|f}}, {{t+|fr|fluage|m}}
 {{trans-bottom}}
 
 {{trans-top|geology: imperceptible downslope movement of surface}}
