--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -4,7 +4,7 @@
 {{stroke order|strokes=9}}
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=68011|canj=AOS|ids=⿰日乍}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=68011|canj=AOS,AOJ|ids=⿰日乍}}
 
 ====Derived characters====
 * [[葃]]
