--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -117,7 +117,7 @@
 * Khakas: {{t|kjh|Американың Піріккен Штаттары}}
 * Khmer: {{t+|km|សហរដ្ឋអាមេរិក}}, {{t|km|អាមេរិក}}
 * Komi-Permyak: {{t|koi|Америкаса Ӧтувтӧм Штатъяс}}
-* Korean: {{t+|ko|미국}} ({{t+|ko|美國}}), {{t+|ko|미합중국}} ({{t+|ko|美合衆國}}), {{t+|ko|아메리카}}, {{t+|ko|[[미]]-}} ({{t+|ko|美}}) {{qualifier|as a component}}
+* Korean: {{t+|ko|미국}} ({{t+|ko|美國}}), {{t+|ko|미합중국}} ({{t+|ko|美合衆國}}), {{t+|ko|아메리카 합중국}} ({{t+|ko|아메리카 合衆國}}), {{t+|ko|아메리카}}, {{t+|ko|[[미]]-}} ({{t+|ko|美}}) {{qualifier|as a component}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|Dewletên Yekbûyî yên Amerîkayê}}, {{t+|ku|Amerîka}}, {{t+|ku|Emrîka}}
 *: Sorani: {{t+|ku|دەولەتێن یەکبوویییێن ئەمەریکایێ}}, {{t|ckb|وڵاتە یەکگرتووەکانی ئەمەریکا}}
