--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -29,7 +29,9 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[distraught]]; [[upset]]
+# [[scared]]
+# {{lb|zh|Teochew}} [[dizzy]], often from [[fear]]
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
