--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -36,6 +36,9 @@
 ====Compounds====
 {{zh-der|頭愩愩}}
 
+====See also====
+*{{q|Hokkien}} {{zh-l|楞|tr=gông}}
+
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
