--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -14,10 +14,12 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 
 # {{lb|en|countable}} A hardened rectangular block of [[mud]], [[clay]] etc., used for [[build]]ing.
 #: ''This wall is made of '''bricks'''''.
-# {{lb|en|uncountable}} Considered collectively, as a building material.
+# {{lb|en|uncountable}} Such hardened mud, clay, etc. considered collectively, as a building material.
 #: ''This house is made of '''brick'''''.
 # {{lb|en|countable}} Something shaped like a brick.
 #: ''a plastic explosive '''brick'''''
+#* '''2011''', Seth Kenlon, ''Revolution Radio'' (page 70)
+#*: The handyman considered the question and I knew she had a '''brick''' of ground beans in her bag but was considering whether the beds and a hot drink was worth a '''brick''' of coffee.
 #* '''2012''', Kevin Sampson, ''Powder'' (page 34)
 #*: He disentangled himself from the safe door and delved inside. He brought out a '''brick''' of banknotes.
 # {{lb|en|slang|dated}} A [[helpful]] and [[reliable]] person.
