--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -75,7 +75,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Bashkir: {{t|ba|матур}}
 * Basque: {{t-needed|eu}}
 * Belait: {{t|beg|jie batien}}
-* Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}, {{t|be|харо́шы}}, {{t|be|красі́вы}}
+* Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}, {{t|be|харо́шы}}, {{t|be|красі́вы}}, {{t|be|урадлі́вы}}
 * Bengali: {{t|bn|সুন্দর|sc=Beng}}
 * Bikol Central: {{t|bcl|magayon}}
 * Breton: {{t+|br|brav}}, {{t+|br|kaer}}
