--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -21,7 +21,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 # {{lb|en|transitive|intransitive}} To apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force.
 #: ''When I give the signal, '''pull''' the rope.''
 #: ''You're going to have to '''pull''' harder to get that cork out of the bottle.''
-#* Bible, Genesis viii. 9
+#* {{RQ:KJV|Genesis|8|9}}
 #*: He put forth his hand {{...}} and '''pulled''' her in.
 #* {{RQ:Shakespeare Macbeth|IV|iii|passage=Ne'er '''pull''' your hat upon your brows.}}
 # To gather with the hand, or by drawing toward oneself; to [[pluck]].
