--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -60,7 +60,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * Hungarian: {{t+|hu|tönkölybúza}}
 * Icelandic: {{t|is|spelt|n}}, {{t|is|speldi|n}}
 * Italian: {{t|it|spelta|f}}
-* Latin: {{t|la|ador|n}}
+* Latin: {{t|la|fār|n}}, {{t|la|ador|n}}
 * Luxembourgish: {{t|lb|Spelz|m}}
 * Norwegian: {{t|no|spelt}}
 * Persian: {{t|fa|کندروس|tr=kondorus}}, {{t|fa|جوگندم|tr=jowgandom}}, {{t|fa|گندم آلمانی|tr=gandom-e ālmānī}}
