--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -17,8 +17,8 @@ From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*f
 
 # {{lb|en|transitive}} To encounter or discover by accident; to happen upon.
 #* {{RQ:Shakespeare JC|II|i|passage=Searching the window for a flint, I '''found'''/This paper, thus sealed up.}}
-#* {{rfdatek|en|Cowley}}
-#*: In woods and forests thou art '''found'''.
+#* '''a. 1667''', {{w|Abraham Cowley}}, ''The Request''
+#*: Among the Woods and Forests thou art '''found'''.
 # {{lb|en|transitive}} To [[encounter]] or [[discover]] something being [[search]]ed for; to [[locate]].
 #: {{ux|en|I '''found''' my car keys. They were under the couch.}}
 #* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}|title={{w|The Celebrity}}|chapter=2|passage=I had occasion to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, and finally leading me to his buggy, turned and drove out of town.}}
