--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -51,7 +51,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 |x=zau3
 |mc=y
 |oc=y
-|cat=n,a,adv,intj
+|cat=n,a,adv,intj,pn
 }}
 
 ===Definitions===
@@ -72,6 +72,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 # [[before]]; in the [[past]] time
 #: {{zh-x|現在 這麼 匆忙，你 早 幹{gàn}嗎{má} 去 了。|So now you are in a hurry. What were you doing before?}}
 # {{lb|zh|Hainanese}} [[breakfast]]
+# {{surname|zh}}
 
 ====Synonyms====
 {{zh-dial|早安}}
