--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -129,7 +129,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Greek: {{t+|el|βρίσκω}}
 *: Ancient: {{t|grc|εὑρίσκω}}
 * Hebrew: {{t+|he|מָצָא|tr=matzá}}
-* Hindi: {{t+|hi|पाना|sc=Deva}}
+* Hindi: {{t|hi|पाना|sc=Deva}}
 * Hungarian: {{t+|hu|talál}}
 * Icelandic: {{t+|is|finna}}
 * Indonesian: {{t+|id|menemukan}}
@@ -159,7 +159,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Mongolian: {{t+|mn|олох|sc=Cyrl}}
 * Mòcheno: {{t|mhn|vinnen}}
 * Neapolitan: {{t|nap|ascià}}, {{t|nap|truvà}}
-* Nepali: {{t-needed|ne}}
+* Nepali: {{t|ne|भेट्नु}}, {{t|ne|पाउनु}}
 * Ngazidja Comorian: {{t|zdj|uparisa}}
 * Norman: {{t|nrf|trouver}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|fine}}, {{qualifier|Föhr-Amrum}} {{t|frr|finj}}
